[gd_scene load_steps=9 format=3 uid="uid://dahmmb64g50ci"]

[ext_resource type="PackedScene" uid="uid://42eka7k2x4cb" path="res://Cenas/player.tscn" id="1_74bqr"]
[ext_resource type="Script" uid="uid://dykhyecntc2fb" path="res://Cenas/main.gd" id="1_x6di6"]
[ext_resource type="PackedScene" uid="uid://juoy8t4bdw0i" path="res://Cenas/linha_chegada.tscn" id="2_ruij7"]
[ext_resource type="Texture2D" uid="uid://dsqtjrssk2xh2" path="res://Material Freeway/Screenshot_99.png" id="2_x6di6"]
[ext_resource type="PackedScene" uid="uid://ffgsgdl6mvtq" path="res://Cenas/hud.tscn" id="4_lb8y5"]
[ext_resource type="AudioStream" uid="uid://bcxfim0jije25" path="res://Material Freeway/sons/tema.wav" id="4_n00j1"]
[ext_resource type="AudioStream" uid="uid://b5eik1y702huk" path="res://Material Freeway/sons/ponto.wav" id="5_x6di6"]
[ext_resource type="AudioStream" uid="uid://oh1qv50vms8" path="res://Material Freeway/sons/ganhou.wav" id="6_btbr3"]

[node name="Main" type="Node"]
script = ExtResource("1_x6di6")

[node name="Pista" type="Sprite2D" parent="."]
scale = Vector2(0.830629, 0.833333)
texture = ExtResource("2_x6di6")
centered = false

[node name="Player" parent="." instance=ExtResource("1_74bqr")]

[node name="LinhaChegada" parent="." instance=ExtResource("2_ruij7")]
position = Vector2(640, 64)

[node name="TimerCarrosRapidos" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerCarrosLentos" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioTema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n00j1")

[node name="AudioPonto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x6di6")

[node name="AudioVitoria" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_btbr3")

[node name="HUD" parent="." instance=ExtResource("4_lb8y5")]

[connection signal="pontua" from="Player" to="." method="_on_player_pontua"]
[connection signal="timeout" from="TimerCarrosRapidos" to="." method="_on_timer_carros_rapidos_timeout"]
[connection signal="timeout" from="TimerCarrosLentos" to="." method="_on_timer_carros_lentos_timeout"]
[connection signal="reinicia" from="HUD" to="." method="_on_hud_reinicia"]
